# memfriend

./: .gitignore  README.md  pyproject.toml
memfriend/: cli.py  commands.py  constants.py  memdb.py
tests/: conftest.py  test_data_commands.py  test_transaction_commands.py
