[tool.poetry]
name = "memfriend"
version = "0.1.0"
description = ""
authors = ["JC Coto"]

[tool.poetry.dependencies]
python = "^3.10"
iteration-utilities = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
